--- a/myweb/research/templates/research/index.html
+++ b/myweb/research/templates/research/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'research/index/css/demo.css' %}"/>
     <!--必要样式-->
     <link rel="stylesheet" type="text/css" href="{% static 'research/index/css/component.css' %}"/>
-    <!--[if IE]>
+    <!--[if IE] -->
     <script src="{% static 'research/index/js/html5.js' %}"></script>
     <![endif]-->
 </head>
@@ -20,20 +20,26 @@
         <div id="large-header" class="large-header">
             <canvas id="demo-canvas"></canvas>
             <div class="logo_box">
-                <h3>欢迎您</h3>
-                <form action="#" name="f" method="post">
+                {%if not password_is_wrong%}
+                    <h3>欢迎您</h3>
+                {% endif %}
+                {% if password_is_wrong %}
+                    <h3>用户名或密码错误</h3>
+                {% endif %}
+                <form action="{% url 'research:do_login' %}" id="search_form" method="post">
+                    {% csrf_token %}
                     <div class="input_outer">
                         <span class="u_user"></span>
-                        <input name="logname" class="text" style="color: #FFFFFF !important" type="text"
+                        <input id="username" name="username" class="text" style="color: #FFFFFF !important" type="text"
                                placeholder="请输入账户">
                     </div>
                     <div class="input_outer">
                         <span class="us_uer"></span>
-                        <input name="logpass" class="text"
+                        <input id="password" name="password" class="text"
                                style="color: #FFFFFF !important; position:absolute; z-index:100;" value=""
                                type="password" placeholder="请输入密码">
                     </div>
-                    <div class="mb2"><a class="act-but submit" href="javascript:;" style="color: #FFFFFF">登录</a></div>
+                    <div class="mb2"><a class="act-but submit" href="javascript:document:search_form.submit();" style="color: #FFFFFF">登录</a></div>
                 </form>
             </div>
         </div>
