--- a/dormitory/dorm/templates/dorm/housemaster/index.html
+++ b/dormitory/dorm/templates/dorm/housemaster/index.html
@@ -1,16 +1,36 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
 </head>
-<body bgcolor="lightblue">
-<p><strong>{{ housemaster.buildingid.name }}</strong>栋<strong>{{ housemaster.name }}</strong>宿舍管理员，你好</p>
-<p>共有<strong>{{ building.amount }}</strong>个房间，其中有<strong>{{ empty }}</strong>间空房，<strong>{{ full
-    }}</strong>间全满，<strong>{{ not_full }}</strong>间未满<a href="{% url 'dorm:housemaster_building' %}?user_id={{user_id}}">查看详情</a></p>
-<a href="{% url 'dorm:housemaster_lookup' %}?user_id={{user_id}}">查询学生信息</a><br/>
-<a href="{% url 'dorm:housemaster_checkin' %}?user_id={{user_id}}">入住审核</a><br/>
-<a href="{% url 'dorm:housemaster_unsubscribe' %}?user_id={{user_id}}">退宿审核</a><br/>
-<a href="{% url 'dorm:housemaster_visitor' %}?user_id={{user_id}}">来访</a><br/>
-<a href="{% url 'dorm:housemaster_mark' %}?user_id={{user_id}}">为宿舍评分</a><br/>
-<a href="{% url 'dorm:user_login' %}">注销</a><br/>
+<body style="background-color: lightblue">
+<div class="container ">
+	<div class="row clearfix" style="height: 10%">
+		<div class="col-md-6 column">
+            <p><strong>{{ housemaster.buildingid.name }}</strong>栋<strong>{{ housemaster.name }}</strong>宿舍管理员，你好</p>
+		</div>
+		<div class="col-md-6 column">
+            <a href="{% url 'dorm:user_login' %}">注销</a><br/>
+		</div>
+	</div>
+	<div class="row clearfix">
+		<div class="col-md-4 column " style="width: 150px">
+            <p>共有<strong>{{ building.amount }}</strong>个房间，其中有<strong>{{ empty }}</strong>间空房，<strong>{{ full }}</strong>间全满，<strong>{{ not_full }}</strong>间未满<a
+                    href="{% url 'dorm:housemaster_building' %}?user_id={{user_id}}" target="iframe_a">查看详情</a></p>
+            <a href="{% url 'dorm:housemaster_lookup' %}?user_id={{user_id}}" target="iframe_a">查询学生信息</a><br/>
+            <a href="{% url 'dorm:housemaster_checkin' %}?user_id={{user_id}}" target="iframe_a">入住审核</a><br/>
+            <a href="{% url 'dorm:housemaster_unsubscribe' %}?user_id={{user_id}}" target="iframe_a">退宿审核</a><br/>
+            <a href="{% url 'dorm:housemaster_visitor' %}?user_id={{user_id}}" target="iframe_a">来访</a><br/>
+            <a href="{% url 'dorm:housemaster_mark' %}?user_id={{user_id}}" target="iframe_a">为宿舍评分</a><br/>
+		</div>
+		<div class="col-md-8 column ">
+            <iframe src="" name="iframe_a" style="height: 700px;width: 1000px"></iframe>
+		</div>
+	</div>
+</div>
+
+
+
 </body>
 </html>
