--- a/dormitory/dorm/templates/dorm/student/repair_record.html
+++ b/dormitory/dorm/templates/dorm/student/repair_record.html
@@ -12,5 +12,5 @@
         </table>
         <a href="{% url 'dorm:student_repair' %}?user_id={{user_id}}" >新增维修</a><br />
         <a href="{% url 'dorm:student_index' %}?user_id={{user_id}}" >返回</a>
-    </body>2
+    </body>
 </html>
