--- a/dormitory/dorm/templates/dorm/instructor/index.html
+++ b/dormitory/dorm/templates/dorm/instructor/index.html
@@ -1,15 +1,35 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
     </head>
-    <body bgcolor="lightblue" >
-        <p>{{ instructor.name }}辅导员，你好</p>
-        {% for cls in class_set %}
-        <a href="{% url 'dorm:instructor_class' %}?user_id={{user_id}}&classid={{cls.name}}" >{{ cls.name }}</a><br />
-        {% endfor %}
-        <a href="{% url 'dorm:instructor_lookup' %}?user_id={{user_id}}" >查询学生信息</a><br />
-        <a href="{% url 'dorm:instructor_checkin' %}?user_id={{user_id}}" >入住审核</a><br />
-        <a href="{% url 'dorm:instructor_unsubscribe' %}?user_id={{user_id}}" >退宿审核</a><br />
-        <a href="{% url 'dorm:user_login' %}" >注销</a><br />
+    <body style="background-color: lightblue" >
+        <div class="container">
+            <div class="row clearfix" style="height: 10%">
+                <div class="col-md-6 column">
+                    <p>{{ instructor.name }}辅导员，你好</p>
+                </div>
+                <div class="col-md-6 column">
+                    <a href="{% url 'dorm:user_login' %}" >注销</a><br />
+                </div>
+            </div>
+            <div class="row clearfix">
+                <div class="col-md-6 column" style="width: 150px">
+                     {% for cls in class_set %}
+                    <a href="{% url 'dorm:instructor_class' %}?user_id={{user_id}}&classid={{cls.name}}" target="iframe_a">{{ cls.name }}</a><br />
+                    {% endfor %}
+                    <a href="{% url 'dorm:instructor_lookup' %}?user_id={{user_id}}" target="iframe_a">查询学生信息</a><br />
+                    <a href="{% url 'dorm:instructor_checkin' %}?user_id={{user_id}}" target="iframe_a">入住审核</a><br />
+                    <a href="{% url 'dorm:instructor_unsubscribe' %}?user_id={{user_id}}" target="iframe_a">退宿审核</a><br />
+                </div>
+                <div class="col-md-6 column">
+                    <iframe src="" name="iframe_a" style="height: 700px;width: 1000px"></iframe>
+                </div>
+            </div>
+        </div>
+
+
+
     </body>
 </html>
