--- a/dormitory/dorm/templates/dorm/maintenance/index.html
+++ b/dormitory/dorm/templates/dorm/maintenance/index.html
@@ -1,9 +1,20 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
 </head>
-<body bgcolor="lightblue">
-<table border="1">
+<body style="background-color: lightblue">
+
+    <div class="container" >
+        <div class="row-fluid" style="height: 10%">
+            <div class="span12">
+                <a href="{% url 'dorm:user_login' %}">注销</a><br/>
+            </div>
+        </div>
+        <div class="row-fluid">
+            <div class="col-md-6 column">
+                <table border="1">
     <caption>待维修记录表</caption>
     <tr>
         <th>楼栋名</th>
@@ -20,11 +31,11 @@
         <td>{{ repair.item }}</td>
         <td>{{ repair.book_dt }}</td>
         <td>{{ repair.reason }}</td>
-        <td><a href="{% url 'dorm:maintenance_repair' %}?user_id={{user_id}}&repairid={{repair.item }}">改为已维修</a></td>
+        <td><a href="{% url 'dorm:maintenance_repair' %}?user_id={{user_id}}&repairid={{repair.item }}" target="iframe_a">改为已维修</a></td>
     </tr>
     {% endfor %}
 </table>
-<table border="1">
+                <table border="1">
     <caption>已维修记录表</caption>
     <tr>
         <th>楼栋名</th>
@@ -49,6 +60,18 @@
     </tr>
     {% endfor %}
 </table>
-<a href="{% url 'dorm:user_login' %}">注销</a><br/>
+            </div>
+            <div class="col-md-6 column">
+                <iframe src="" name="iframe_a" style="height: 500px;width: 500px"></iframe>
+            </div>
+        </div>
+        <div class="row-fluid">
+            <div class="span12">
+
+            </div>
+        </div>
+    </div>
+
+
 </body>
 </html>
